tests/build/cases/property/input_no_debug.stderr
error[E0277]: the trait bound `NoDebug: Clone` is not satisfied
   --> cases/property/input_no_debug.rs:14:37
    |
14  | pub fn bar(child: impl UiNode, bar: NoDebug) -> impl UiNode {
    |                                     ^^^^^^^ the trait `Clone` is not implemented for `NoDebug`
    |
note: required by a bound in `allowed_in_when_property_requires_IntoVar_members`
   --> $WORKSPACE/zero-ui-core/src/var.rs
    |
    | pub trait IntoVar<T: VarValue>: Clone {
    |                                 ^^^^^ required by this bound in `allowed_in_when_property_requires_IntoVar_members`

error[E0277]: `NoDebug` doesn't implement `Debug`
  --> cases/property/input_no_debug.rs:14:37
   |
14 | pub fn bar(child: impl UiNode, bar: NoDebug) -> impl UiNode {
   |                                     ^^^^^^^ `NoDebug` cannot be formatted using `{:?}`
   |
   = help: the trait `Debug` is not implemented for `NoDebug`
   = note: add `#[derive(Debug)]` to `NoDebug` or manually `impl Debug for NoDebug`
   = note: required because of the requirements on the impl of `VarValue` for `NoDebug`
   = note: required because of the requirements on the impl of `IntoVar<NoDebug>` for `NoDebug`

error[E0308]: mismatched types
  --> cases/property/input_no_debug.rs:14:37
   |
14 | pub fn bar(child: impl UiNode, bar: NoDebug) -> impl UiNode {
   |                                     ^^^^^^^ expected struct `NoDebug`, found struct `OwnedVar`
   |
   = note: expected struct `NoDebug`
              found struct `OwnedVar<NoDebug>`
